Refactor PII detection: update service implementation, enhance address detection, and improve phone number validation